@@ -1,4 +1,5 @@
 HEAD
+	+ Allow offline license key validation
 	+ Automatic save changes in license activation after first login
 	+ Avoid errors when parsing JSON for dashboard widgets
 	+ Force restore of configuration backup from 3.X by using custom script
